@@ -1,3 +1,11 @@
+2006-08-24  Laurent Sansonetti  <lsansonetti@apple.com>
+
+	* src/lib/rbosa.rb:
+	Don't override existing methods, prefixing the generated 
+	method names with 'osa_' when necessary. When mapping the
+	commands, filter the classes to only take the oldest ones in
+	the hierarchy.
+
 2006-08-23  Laurent Sansonetti  <lsansonetti@apple.com>
 
 	* src/lib/rbosa.rb:
